Add user # onto website, update video thumbnail, and update team page (not done)

--- a/index.html
+++ b/index.html
@@ -262,6 +262,11 @@
                     <h4>
                         Social Media TestDrive modules can be used individually, in pairs, or as a guided group activity in educational settings.
                     </h4>
+                    <div class="row justify-content-center">
+                        <div class="col-xl-8 text-center">
+                            <img src="img/users_image.svg " alt=" " style="width:100%;">
+                        </div>
+                    </div>
                 </div>
             </div>
 
