--- a/team2.html
+++ b/team2.html
@@ -193,9 +193,9 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen
-                                Zou</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                            laboris.
+                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen (Wenting)
+                                Zou</a> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide personalized feedback
+                            to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
                         </p>
                     </div>
                 </div>
@@ -206,8 +206,8 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-                            ad minim veniam, quis nostrud exercitation ullamco laboris.
+                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> assists with the outcome evaluation study on TestDrive and contributes to TestDrive's outreach and professional development efforts.
+                            She is currently the lab manager for the Social Media Lab in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -271,7 +271,7 @@
                     <span class="hyperlinkBlue">Anna Spring</span> was the TestDrive application developer. She was an Applications Programmer in the Department of Communication at Cornell University.
                 </p>
                 <p class="teamText">
-                    <span class="hyperlinkBlue">Dr. Natercia Valle</span> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim.
+                    <span class="hyperlinkBlue">Dr. Natercia Valle</span> led outreach and professional development efforts related to TestDrive. She was a Postdoctoral Associate in the Department of Communication at Cornell University.
                 </p>
             </div>
 
