fix donation page imagE

--- a/team2.html
+++ b/team2.html
@@ -181,8 +181,7 @@
                     <div class="col-sm-8">
                         <p class="teamText">
                             <a href="mailto:dlf92@cornell.edu" target="_blank" class="noDecorationText">
-                                Diana Freed</a> is lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                            ullamco laboris.
+                                Diana Freed </a> contributes to content development for the TestDrive Project. She is a PhD candidate in the Department of Computing and Information Science at Cornell University.
                         </p>
                     </div>
                 </div>
