--- a/for_educators.html
+++ b/for_educators.html
@@ -162,7 +162,7 @@
                         Social Media TestDrive helps you lead open, meaningful conversations with your students about social media.
                     </h4>
                     <h4>
-                        Use the reflection questions at the end of each module to spark individual or group discussions.
+                        Use the reflection and quiz questions at the end of each module to evaluate students' understanding of key social media concepts and to spark individual or group discussions.
                     </h4>
 
                 </div>
