--- a/for_parents.html
+++ b/for_parents.html
@@ -130,7 +130,8 @@
                 <div class='col-md-6 order-1 order-md-1'>
                     <h1> Learn, explore, and reflect on key concepts </h1>
                     <h4>
-                        Each Social Media TestDrive module has four key sections: Tutorial, Guided activity, Free play, and Reflection. This design gives young people the opportunity to learn, explore, and reflect on key social media concepts, definitions, and prosocial behaviors.
+                        Each Social Media TestDrive module has four key sections: Tutorial, Guided activity, Free play, and Reflection. There is a quiz after the learners complete the module. This design gives young people the opportunity to learn, explore, and reflect on, and
+                        assess their understanding of key social media concepts, definitions, and prosocial behaviors.
                     </h4>
                     <h4>
                         Watch this <b>
