--- a/donate.html
+++ b/donate.html
@@ -104,7 +104,7 @@
                         <a href="https://www.commonsense.org/education/social-media-test-drive" target="_blank">Common Sense Education</a>.
                         <br><br> It is a free resource, so we invite your support to fund its continual operation and addition of new features.
                         <br><br>
-                        <b>Join us in supporting our mission to prepare young people for the online world! </b>
+                        <b>Join us in supporting our mission to prepare young people for the online world, and we thank you for your generous support! </b>
                     </h4>
                     <a href='https://securelb.imodules.com/s/1717/giving/interior.aspx?sid=1717&gid=2&pgid=16421&cid=7311&dids=5370&bledit=1' target="_blank">
                         <button class="donationButton" type="button">
