Update team page

--- a/for_parents.html
+++ b/for_parents.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/forparents.css" media="all">
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <a href="index.html" class="logoLinkContainer">
-                <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
+                <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
           Test<span class="brand">Drive</span>
                 </span>
