--- a/team2.html
+++ b/team2.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="shortcut icon" href="/img/favicon.png" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="styles/all.css" media="all">
     <link rel="stylesheet" type="text/css" href="styles/team.css" media="all">
@@ -39,7 +39,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light">
             <a href="index.html" class="logoLinkContainer">
-                <img src="/img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
+                <img src="img/testDriveLogo.svg" width="110px" height="110px" class="d-inline-block align-top testDriveLogo" alt="Social Media TestDrive Logo">
                 <span class="navbar-brand fancy d-none d-md-inline-block align-middle">
                     Test<span class="brand">Drive</span>
                 </span>
@@ -67,6 +67,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="faq.html">FAQ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="team.html">Team</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link alignItemsCenter" href="donate.html">
@@ -113,35 +116,22 @@
                 <!-- Natalie Bazarova -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/natalie_bazarova.jpg" class="rounded-circle" alt="Photo of Natalie Bazarova" width="100%">
+                        <img src="img/people/natalie_bazarova.jpg" class="rounded-circle" alt="Photo of Natalie Bazarova" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
                             <a href="https://cals.cornell.edu/natalie-bazarova" target="_blank">
-                                Dr. Natalie Bazarova</a> is the project co-founder and the current Project Director. She is an Associate Professor in the Department of Communication and the Director of the Social Media Lab
+                                Dr. Natalie Bazarova</a> is the Social Media TestDrive project co-founder and Director. She is an Associate Professor in the Department of Communication and the Director of the Social Media Lab
                             at Cornell University. She can be contacted at
                             <a href="mailto:nnb8@cornell.edu" target="_blank" class="noDecorationText">
                                 nnb8@cornell.edu</a>.
                         </p>
                     </div>
                 </div>
-                <!-- Janis Whitlock -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
-                    <div class="col-sm-4">
-                        <img src="./img/people/janis_whitlock.jpg" class="rounded-circle" alt="Photo of Janis Whitlock" width="100%">
-                    </div>
-                    <div class="col-sm-8">
-                        <p class="teamText">
-                            <a href="https://www.human.cornell.edu/people/jlw43" target="_blank">
-                                Dr. Janis Whitlock</a> is the project co-founder and currently contributes to module development and evaluation oversight. She is an Associate Director and a Research Scientist at Cornell's Bronfenbrenner
-                            Center for Translational Research.
-                        </p>
-                    </div>
-                </div>
                 <!-- Dominic Difranzo -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/dominic_difranzo.jpg" class="rounded-circle" alt="Photo of Dominic Difranzo" width="100%">
+                        <img src="img/people/dominic_difranzo.jpg" class="rounded-circle" alt="Photo of Dominic Difranzo" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
@@ -150,21 +140,35 @@
                         </p>
                     </div>
                 </div>
-                <!-- Dan Cosley -->
+                <!-- Janis Whitlock -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/dan_cosley.jpg" class="rounded-circle" alt="Photo of Dan Cosley" width="100%">
+                        <img src="img/people/janis_whitlock.jpg" class="rounded-circle" alt="Photo of Janis Whitlock" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a> provides support for the design and content development of the TestDrive project.
+                            <a href="mailto:jlw43@cornell.edu" target="_blank" class="noDecorationText">
+                                Dr. Janis Whitlock</a> is the project co-founder and currently contributes to module evaluation oversight. She is an Emerita research scientist at Cornell University.
+                        </p>
+                    </div>
+                </div>
+                <!-- Ellen Zou -->
+                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                    <div class="col-sm-4">
+                        <img src="img/people/ellen_zou.jpeg" class="rounded-circle" alt="Photo of Ellen Zou" width="100%">
+                    </div>
+                    <div class="col-sm-8">
+                        <p class="teamText">
+                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen (Wenting)
+                                                Zou</a> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide personalized
+                            feedback to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
                         </p>
                     </div>
                 </div>
                 <!-- Amanda Purington -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/amanda_purington.jpg" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
+                        <img src="img/people/amanda_purington.jpg" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
@@ -176,7 +180,7 @@
                 <!-- Diana Freed -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/diana_freed.jpg" class="rounded-circle" alt="Photo of Diana Freed" width="100%">
+                        <img src="img/people/diana_freed.jpg" class="rounded-circle" alt="Photo of Diana Freed" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
@@ -185,23 +189,21 @@
                         </p>
                     </div>
                 </div>
-                <!-- Ellen Zou -->
+                <!-- Dan Cosley -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/ellen_zou.jpeg" class="rounded-circle" alt="Photo of Ellen Zou" width="100%">
+                        <img src="img/people/dan_cosley.jpg" class="rounded-circle" alt="Photo of Dan Cosley" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen (Wenting)
-                                Zou</a> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide personalized feedback
-                            to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
+                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a> provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
                 </div>
                 <!-- Eunice Han -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han" width="100%">
+                        <img src="img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
@@ -213,7 +215,7 @@
                 <!-- Winice Hui -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="./img/people/winice_hui.jpg" class="rounded-circle" alt="Photo of Winice Hui" width="100%">
+                        <img src="img/people/winice_hui.jpg" class="rounded-circle" alt="Photo of Winice Hui" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
@@ -314,9 +316,9 @@
                 <div class="col-auto mr-auto">
                     <p class="footerLeftItem">Copyright &copy 2022 Social Media TestDrive</p>
                 </div>
-                <div class="col-auto">
+                <!-- <div class="col-auto">
                     <a href="team.html" class="footer-link">Team</a>
-                </div>
+                </div> -->
                 <div class="col-auto">
                     <a href="press.html" class="footer-link">Press</a>
                 </div>
