Update team page

--- a/team2.html
+++ b/team2.html
@@ -128,6 +128,18 @@
                         </p>
                     </div>
                 </div>
+                <!-- Janis Whitlock -->
+                <div class="col-lg-6 addColumnPadding addRowMargin row">
+                    <div class="col-sm-4">
+                        <img src="img/people/janis_whitlock.jpg" class="rounded-circle" alt="Photo of Janis Whitlock" width="100%">
+                    </div>
+                    <div class="col-sm-8">
+                        <p class="teamText">
+                            <a href="mailto:jlw43@cornell.edu" target="_blank" class="noDecorationText">
+                                                Dr. Janis Whitlock</a> is the project co-founder and currently contributes to module evaluation oversight. She is an Emerita research scientist at Cornell University.
+                        </p>
+                    </div>
+                </div>
                 <!-- Dominic Difranzo -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
@@ -140,15 +152,15 @@
                         </p>
                     </div>
                 </div>
-                <!-- Janis Whitlock -->
+                <!-- Amanda Purington -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="img/people/janis_whitlock.jpg" class="rounded-circle" alt="Photo of Janis Whitlock" width="100%">
+                        <img src="img/people/amanda_purington.jpg" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:jlw43@cornell.edu" target="_blank" class="noDecorationText">
-                                Dr. Janis Whitlock</a> is the project co-founder and currently contributes to module evaluation oversight. She is an Emerita research scientist at Cornell University.
+                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">Amanda Purington</a> contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication.
+                            She is the Director of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -162,18 +174,6 @@
                             <a href="mailto:wz434@cornell.edu" target="_blank" class="noDecorationText"> Dr. Ellen (Wenting)
                                                 Zou</a> is involved in the evaluation, redesign, and analytics of TestDrive. She is currently leading the development of an AI-based conversational agent system to provide personalized
                             feedback to learners on TestDrive. She is a Postdoctoral Research Associate in the Social Media Lab.
-                        </p>
-                    </div>
-                </div>
-                <!-- Amanda Purington -->
-                <div class="col-lg-6 addColumnPadding addRowMargin row">
-                    <div class="col-sm-4">
-                        <img src="img/people/amanda_purington.jpg" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
-                    </div>
-                    <div class="col-sm-8">
-                        <p class="teamText">
-                            <a href="mailto:ald17@cornell.edu" target="_blank" class="noDecorationText">Amanda Purington</a> contributes to content development and is conducting an outcome evaluation on TestDrive as part of her doctorate in Communication.
-                            She is the Director of Evaluation and Research at ACT for Youth project in the Bronfenbrenner Center for Translational Research and a graduate student in the Department of Communication at Cornell University.
                         </p>
                     </div>
                 </div>
@@ -196,19 +196,19 @@
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank"> Dr. Dan Cosley</a> provides support for the design and content development of the TestDrive project.
+                            <a href="https://www.cs.cornell.edu/~danco/" target="_blank" class="noDecorationText"> Dr. Dan Cosley</a> provides support for the design and content development of the TestDrive project.
                         </p>
                     </div>
                 </div>
-                <!-- Eunice Han -->
+                <!-- Ashley Shea -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han" width="100%">
+                        <img src="img/people/ashley_shea2.jpg" class="rounded-circle" alt="Photo of Ashley Shea" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
-                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> assists with the outcome evaluation study on TestDrive and contributes to TestDrive's outreach and professional development efforts.
-                            She is currently the lab manager for the Social Media Lab in the Department of Communication at Cornell University.
+                            <a href="mailto:ald52@cornell.edu" target="_blank" class="noDecorationText"> Ashley Shea </a> provides support for the content development of the TestDrive project. She is a PhD candidate in the Department of Communication
+                            at Cornell University and the Head of Instruction Initiatives at Cornell Library.
                         </p>
                     </div>
                 </div>
@@ -223,7 +223,17 @@
                         </p>
                     </div>
                 </div>
+                <!-- Eunice Han -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
+                    <div class="col-sm-4">
+                        <img src="img/people/eunice_han.png" class="rounded-circle" alt="Photo of Eunice Han" width="100%">
+                    </div>
+                    <div class="col-sm-8">
+                        <p class="teamText">
+                            <a href="mailto:eh552@cornell.edu" target="_blank" class="noDecorationText"> Eunice Han</a> assists with the outcome evaluation study on TestDrive and contributes to TestDrive's outreach and professional development efforts.
+                            She is currently the lab manager for the Social Media Lab in the Department of Communication at Cornell University.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
