Make Team Page public

--- a/research.html
+++ b/research.html
@@ -69,6 +69,9 @@
                         <a class="nav-link" href="faq.html">FAQ</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="team.html">Team</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link alignItemsCenter" href="donate.html">
                             <!-- Free, open source bootstrap icon: megaphone fill -->
                             <!-- Copied HTML from: https://icons.getbootstrap.com/icons/heart-fill/ -->
@@ -170,9 +173,6 @@
             <div class="row align-items-center footerRow">
                 <div class="col-auto mr-auto">
                     <p class="footerLeftItem">Copyright &copy 2022 Social Media TestDrive</p>
-                </div>
-                <div class="col-auto">
-                    <a href="team.html" class="footer-link">Team</a>
                 </div>
                 <div class="col-auto">
                     <a href="press.html" class="footer-link">Press</a>
