Change Amanda's picture

--- a/team.html
+++ b/team.html
@@ -156,7 +156,7 @@
                 <!-- Amanda Purington -->
                 <div class="col-lg-6 addColumnPadding addRowMargin row">
                     <div class="col-sm-4">
-                        <img src="img/people/amanda_purington.jpg" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
+                        <img src="img/people/amanda_purington.png" class="rounded-circle" alt="Photo of Amanda Purington" width="100%">
                     </div>
                     <div class="col-sm-8">
                         <p class="teamText">
